--- a/chrome/skin/default/zotero/zotero.css
+++ b/chrome/skin/default/zotero/zotero.css
@@ -154,24 +154,16 @@ zoteromergepane {
 	color: transparent !important;
 	padding: 0 !important;
 	margin: 0 5px 0 0 !important;
-	width: 19px;
-	height: 12px;
+	width: 18px;
+	height: 18px;
 }
 
 .zotero-clicky[value="-"] {
 	-moz-border-image: url('chrome://zotero/skin/minus.png') 0 0 0 0 stretch;
-	min-width: 18px;
-	min-height: 18px;
-	max-width: 18px;
-	max-height: 18px;
 }
 
 .zotero-clicky[value="+"] {
 	-moz-border-image: url('chrome://zotero/skin/plus.png') 0 0 0 0 stretch;
-	min-width: 18px;
-	min-height: 18px;
-	max-width: 18px;
-	max-height: 18px;
 }
 
 .zotero-clicky[value="+"][disabled=true] {
@@ -192,7 +184,7 @@ zoteromergepane {
 {
 	background: #666;
 	background: rgb(187, 206, 241);
-	border: 1px solid rgb(109, 149, 224) !important;
+	border: 1px solid rgb(109, 149, 224);
 }
 
 .zotero-clicky:not([disabled=true]):active,
@@ -200,7 +192,7 @@ zoteromergepane {
 .zotero-clicky[selected="true"]
 {
 	color: white;
-	background: rgb(89, 139, 236) !important;
+	background: rgb(89, 139, 236);
 }
 
 
